<resources>
    <string name="app_name" translatable="false">Buitanda</string>
    <string name="seller_account">Seller Account</string>
    <string name="seller_dashboard">Seller Dashboard</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="seller_orders">Seller Orders</string>
    <string name="attributes">Attributes</string>
    <string name="add_new_product">Add New Product</string>
    <string name="seller_products">Seller Products</string>
    <string name="transactions">Transactions</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="invoice_print_template">Invoice Print Template</string>
    <string name="chat_with_admin">Chat with Admin</string>
    <string name="ask_questions">Ask Questions</string>
    <string name="activity_title_ask_admin">Ask Admin</string>
    <string name="nav_seller_pending_status">Your Seller Account is under Approval by the Admin</string>
    <string name="become_seller">Become Seller</string>
    <string name="marketplace">Marketplace</string>
    <string name="facebook_app_id" translatable="false">488983255076998</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb488983255076998</string>
    <string name="auction_product_list_tab_label">Auction Product List</string>
    <string name="auto_bid_X">Auto Bid : %s</string>
    <string name="x_selected_count">%d selected</string>
    <string name="reserve_price_x">Reserve Price: %s</string>
    <string name="starting_price_x">Starting Price: %s</string>
    <string name="max_x">Max: %s</string>
    <string name="min_x">Min: %s</string>
    <string name="increment_x">Increment : %s</string>
    <string name="start_x">Start : %s</string>
    <string name="stop_x">Stop : %s</string>
    <string name="subject">Subject</string>
    <string name="query">Query</string>
    <string name="submit">Submit</string>
    <string name="msg_this_is_a_required_field">This is a required field.</string>
    <string name="query_submitted">Query Submitted</string>
    <string name="is_require_text">is required !</string>
    <string name="sign_up_as_seller">Do you want to become Seller/Vendor?</string>
    <string name="shop_url">Shop Url</string>
    <string name="nif_number">NIF Number</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_url_desc">(This will be used to display your public profile)</string>
    <string name="waiting_for_approval_from_admin_your_application_current_status_is_pending">Waiting for approval from admin, your application current status is Pending</string>
    <string name="create_attribute">Create Attribute</string>
    <string name="default_store_view">Default Store View</string>
    <string name="position">Position</string>
    <string name="mark_as_default">Mark as default</string>
    <string name="remove">Remove</string>
    <string name="attribute_label">Attribute Label</string>
    <string name="attribute_code">Attribute Code</string>
    <string name="attribute_values">Attribute Values</string>
    <string name="value_required">Value Required</string>
    <string name="add_values">Add Values</string>
    <string name="add_another_value">Add Another Value</string>
    <string name="basic">Basic</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="save_profile">Save Profile</string>
    <string name="shop_title">Shop Title</string>
    <string name="contact_no">Contact No.</string>
    <string name="tax_vat_number">Tax/Vat Number</string>
    <string name="shop_locality">Shop Locality</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="image_and_theme">Image &amp; Theme</string>
    <string name="background_color">Background Color</string>
    <string name="cover_banner">Cover Banner</string>
    <string name="change_color">Change Color</string>
    <string name="add_banner">Add Banner</string>
    <string name="logo">Logo</string>
    <string name="add_logo">Add Logo</string>
    <string name="social_profiles">Social Profiles</string>
    <string name="profile_link">Profile Link</string>
    <string name="facebook">FaceBook</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="vimeo">Vimeo</string>
    <string name="pinterest">Pinterest</string>
    <string name="seo">SEO</string>
    <string name="meta_description">Meta Description</string>
    <string name="meta_keyword">Meta Keyword</string>
    <string name="payment_info">Payment Info</string>
    <string name="payment_details">Payment Details</string>
    <string name="policies">Policies</string>
    <string name="shipping_policy">Shipping Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="choose_color">Choose Color</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_banner">Are you sure you want to delete this banner?</string>
    <string name="are_you_sure_you_want_to_delete_this_logo">Are you sure you want to delete this logo?</string>
    <string name="country_colon">Country :</string>
    <string name="enter_meta_keywords_comma_separated">Enter Meta Keywords Comma(\',\') Separated..</string>
    <string name="select_country">Select Country</string>
    <string name="pdf_header_info">PDF Header Info</string>
    <string name="save_information">Save Information</string>
    <string name="edit_pdf_header">Edit PDF Header</string>
    <string name="please_fill_the_information">Please fill the information</string>
    <string name="chat_with_sellers">Chat With Sellers</string>
    <string name="search_seller">Search Sellers</string>
    <string name="no_sellers_were_found">No sellers were found.</string>
    <string name="new_message_from_admin">New message from admin</string>
    <string name="edit_product">Edit Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="short_description">Short Description</string>
    <string name="special_price_from">Special Price From</string>
    <string name="special_price_to">Special Price To</string>
    <string name="special_price">Special Price ($)</string>
    <string name="special_price_currency">Special Price (%s)</string>
    <string name="price_currency">Price (%s)</string>
    <string name="sku">SKU</string>
    <string name="product_category">Product Category</string>
    <string name="product_purchase_limit">Product Purchase Limit</string>
    <string name="stock">Stock</string>
    <string name="weight">Weight</string>
    <string name="images">Images</string>
    <string name="downloadable">Downloadable</string>
    <string name="related_products">Related Products</string>
    <string name="upsell_products">Upsell Products</string>
    <string name="cross_sell_products">Cross-Sell Products</string>
    <string name="stock_count">Stock Count</string>
    <string name="meta_title">Meta Title</string>
    <string name="yes_limited_purchase_only">Yes limited purchase only</string>
    <string name="purchase_limit">Purchase Limit</string>
    <string name="does_this_have_a_weight">Does this have a weight?</string>
    <string name="weight_x">Weight (%1$s)</string>
    <string name="is_this_downloadable_product">Is this downloadable Product?</string>
    <string name="please_select_visibility">--Please  select visibility--</string>
    <string name="select_category">Select Category</string>
    <string name="msg_no_filter_option_available">No filter options available for the results !</string>
    <string name="related_product_title">Related Products</string>
    <string name="upsell_product">Up-Sell Products</string>
    <string name="cross_sell_product">Cross-Sell Products</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="add_another_link">Add Another Link</string>
    <string name="title">Title</string>
    <string name="file_type_file_link">File Type - Link</string>
    <string name="file_type_file_upload">File Type - Upload</string>
    <string name="sample_type_file_link">Sample Type - Link</string>
    <string name="sample_type_file_upload">Sample Type - Upload</string>
    <string name="upload">Upload</string>
    <string name="sample">Sample</string>
    <string name="unlimited">Unlimited</string>
    <string name="max_downloads">Max downloads</string>
    <string name="warning_are_you_sure">Are you sure ?</string>
    <string name="delete_warning">You want to delete this?</string>
    <string name="price">Price</string>
    <string name="url">URL</string>
    <string name="file">File</string>
    <string name="sample_url">Sample URL</string>
    <string name="sample_file">Sample File</string>
    <string name="title_of_sample">Title of sample</string>
    <string name="add_another_sample">Add Another Sample</string>
    <string name="attribute_set_x">Attribute Set: %s</string>
    <string name="status_x">Status: %s</string>
    <string name="type_x">Status: %s</string>
    <string name="sku_x">SKU: %s</string>
    <string name="title_of_link_s">Title of link(s)</string>
    <string name="alt_text">Alt Text</string>
    <string name="role">Role</string>
    <string name="hide_from_product_page">Hide from Product Page</string>
    <string name="edit_image_info">Edit Image Info</string>
    <string name="we_couldn_t_find_any_records">We could not find any records.</string>
    <string name="disable_product">Disable Product</string>
    <string name="enable_product">Enable Product</string>
    <string name="base">Base</string>
    <string name="product_type_not_found">Product type not found.</string>
    <string name="stock_availability_colon">Stock Availability:</string>
    <string name="visibility_colon">Visibility:</string>
    <string name="tax_class_colon">Tax Class:</string>
    <string name="attribute_set_colon">Attribute Set:</string>
    <string name="product_type_colon">Product Type:</string>
    <string name="order_status_all" translatable="false"></string>
    <string name="order_status_canceled" translatable="false">canceled</string>
    <string name="order_status_closed" translatable="false">closed</string>
    <string name="order_status_complete" translatable="false">complete</string>
    <string name="order_status_fraud" translatable="false">fraud</string>
    <string name="order_status_holded" translatable="false">holded</string>
    <string name="order_status_payment_review" translatable="false">payment_review</string>
    <string name="order_status_paypal_canceled_reversal" translatable="false">paypal_canceled_reversal</string>
    <string name="order_status_paypal_reversed" translatable="false">paypal_reversed</string>
    <string name="order_status_pending" translatable="false">pending</string>
    <string name="order_status_pending_payment" translatable="false">pending_payment</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="write_to_us">Write to us</string>
    <string name="contact_us">Contact Us</string>
    <string name="order_count">Order Count</string>
    <string name="name_">Name -</string>
    <string name="email_">Email -</string>
    <string name="contact_no_">Contact No -</string>
    <string name="gender_">Gender -</string>
    <string name="base_total_">Base Total -</string>
    <string name="address_">Address -</string>
</resources>