<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import
            alias="View"
            type="android.view.View" />

        <variable
            name="shippingPolicy"
            type="String" />

        <variable
            name="privacyPolicy"
            type="String" />

        <variable
            name="returnPolicy"
            type="String" />

        <variable
            name="handler"
            type="com.webkul.mobikulmp.handlers.SellerProfileMoreMenuHandler" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal">

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/color_background"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_generic"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_generic"
                android:text="@string/policies"
                android:textAllCaps="true"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="@{()->handler.onClickPolicy(@string/shipping_policy,shippingPolicy)}"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:singleLine="true"
                android:text="@string/shipping_policy"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="@color/divider_color" />

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="@{()->handler.onClickPolicy(@string/privacy_policy,privacyPolicy)}"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:singleLine="true"
                android:text="@string/privacy_policy"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:visibility="@{privacyPolicy==null ||privacyPolicy.isEmpty() ? View.GONE : View.VISIBLE}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="@color/divider_color"
                android:visibility="@{privacyPolicy==null ||privacyPolicy.isEmpty() ? View.GONE : View.VISIBLE}" />

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="@{()->handler.onClickPolicy(@string/return_policy,returnPolicy)}"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:singleLine="true"
                android:text="@string/return_policy"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="@color/divider_color" />

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/color_background"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_generic"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_generic"
                android:text="@string/contact_us"
                android:textAllCaps="true"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                fontPath="fonts/Montserrat-SemiBold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:onClick="@{()->handler.onClickWriteUs()}"
                android:paddingStart="@dimen/spacing_small"
                android:paddingTop="@dimen/spacing_normal"
                android:paddingEnd="@dimen/spacing_small"
                android:paddingBottom="@dimen/spacing_small"
                android:singleLine="true"
                android:text="@string/write_to_us"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_small"
                android:background="@color/divider_color" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>
